fixing layout shifting issue

--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,7 @@ nav [alt="actions"]{
 .intro-section{
     display: flex;
     padding: 20px;
+    height: 84vh;
     align-items: flex-end;
 }
 
